--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           </thead>
 
           <tbody>
-            <tr >
+            <tr class="disabled">
               <td>1</td>
-              <td class="slotStatus">AVAILABLE</td>
+              <td class="slotStatus">FULL</td>
               <td>21<sup>st</sup> May 2020</td>
               <td>4 pm to 5 pm</td>
             </tr>
