--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
               <td>21<sup>st</sup> May 2020</td>
               <td>4 pm to 5 pm</td>
             </tr>
-            <tr >
+            <tr class="disabled">
               <td>2</td>
-              <td class="slotStatus">AVAILABLE</td>
+              <td class="slotStatus">FULL</td>
 
               <td>28<sup>th</sup> May 2020</td>
               <td>4 pm to 5 pm</td>
