--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
               <td>28<sup>th</sup> May 2020</td>
               <td>4 pm to 5 pm</td>
             </tr>
-            <tr >
+            <tr  class="disabled">
               <td>3</td>
-              <td class="slotStatus">AVAILABLE</td>
+              <td class="slotStatus">FULL</td>
 
               <td>4<sup>th</sup> June 2020</td>
               <td>4 pm to 5 pm</td>
