--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
               <td>11<sup>th</sup> June 2020</td>
               <td>4 pm to 5 pm</td>
             </tr>
-            <tr >
+            <tr class="disabled" >
               <td>5</td>
-              <td class="slotStatus">AVAILABLE</td>
+              <td class="slotStatus">FULL</td>
 
               <td>18<sup>th</sup> June 2020</td>
               <td>4 pm to 5 pm</td>
