--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
               <td>18<sup>th</sup> June 2020</td>
               <td>4 pm to 5 pm</td>
             </tr>
-            <tr >
+            <tr class ="disabled">
               <td>6</td>
-              <td class="slotStatus">AVAILABLE</td>
+              <td class="slotStatus">FULL</td>
 
               <td>25<sup>th</sup> June 2020</td>
               <td>4 pm to 5 pm</td>
