--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
       <div class="button onPhone">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
+           disabled
           href="https://forms.gle/RX9BrhdeAFW3Ziz59"
         >
-          <span class="text"> Register Here </span></a
+          <span class="text"> All Slots Closed </span></a
         >
       </div>
       <div class="schedule container">
@@ -210,8 +211,9 @@
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
           href="https://forms.gle/RX9BrhdeAFW3Ziz59"
+           disabled
         >
-          <span class="text"> Register Here </span></a
+          <span class="text"> All Slots Closed </span></a
         >
       </div>
     </main>
