--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <ol>
             <li>
               Please fill in the
-              <a href="https://forms.gle/RX9BrhdeAFW3Ziz59"> Form </a>and ensure
+              Form and ensure
               to put the correct details
             </li>
             <br />
