added new slots

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
            disabled
-          href="https://forms.gle/RX9BrhdeAFW3Ziz59"
+          href="https://forms.gle/X85vDVwwRexcWcKU8"
         >
           <span class="text"> All Slots Closed </span></a
         >
@@ -110,45 +110,65 @@
           </thead>
 
           <tbody>
-            <tr class="disabled">
+            <tr class="">
               <td>1</td>
-              <td class="slotStatus">FULL</td>
-              <td>21<sup>st</sup> May 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td class="slotStatus">AVAILABLE</td>
+              <td>2<sup>nd</sup> July 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>
-            <tr class="disabled">
+            <tr class="">
               <td>2</td>
-              <td class="slotStatus">FULL</td>
-
-              <td>28<sup>th</sup> May 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td class="slotStatus">AVAILABLE</td>
+              <td>9<sup>th</sup> July 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>
-            <tr  class="disabled">
+            <tr  class="">
               <td>3</td>
-              <td class="slotStatus">FULL</td>
+              <td class="slotStatus">AVAILABLE</td>
 
-              <td>4<sup>th</sup> June 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td>16<sup>th</sup> July 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>
-            <tr   class="disabled">
+            <tr   class="">
               <td>4</td>
-              <td class="slotStatus">FULL</td>
-              <td>11<sup>th</sup> June 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td class="slotStatus">AVAILABLE</td>
+              <td>23<sup>rd</sup> July 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>
-            <tr class="disabled" >
+            <tr class="" >
               <td>5</td>
-              <td class="slotStatus">FULL</td>
+              <td class="slotStatus">AVAILABLE</td>
 
-              <td>18<sup>th</sup> June 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td>30<sup>th</sup> July 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>
-            <tr class ="disabled">
+            <tr class ="">
               <td>6</td>
-              <td class="slotStatus">FULL</td>
+              <td class="slotStatus">AVAILABLE</td>
 
-              <td>25<sup>th</sup> June 2020</td>
-              <td>4 pm to 5 pm</td>
+              <td>6<sup>th</sup> August 2020</td>
+              <td>4 pm to 6 pm</td>
+            </tr>    
+            <tr class ="">
+              <td>7</td>
+              <td class="slotStatus">AVAILABLE</td>
+
+              <td>13<sup>th</sup> August 2020</td>
+              <td>4 pm to 6 pm</td>
+            </tr>    
+            <tr class ="">
+              <td>8</td>
+              <td class="slotStatus">AVAILABLE</td>
+
+              <td>20<sup>th</sup> August 2020</td>
+              <td>4 pm to 6 pm</td>
+            </tr>    
+            <tr class ="">
+              <td>9</td>
+              <td class="slotStatus">AVAILABLE</td>
+
+              <td>27<sup>th</sup> August 2020</td>
+              <td>4 pm to 6 pm</td>
             </tr>          
           </tbody>
         </table>
@@ -165,7 +185,6 @@
               to put the correct details
             </li>
             <br />
-
             <li>
               You will receive a mail from Adobe giving you access to Adobe
               Spark Premium License.
@@ -210,7 +229,7 @@
       <div class="button onPC">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
-          href="https://forms.gle/RX9BrhdeAFW3Ziz59"
+          href="https://forms.gle/X85vDVwwRexcWcKU8"
            disabled
         >
           <span class="text"> All Slots Closed </span></a
