--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       <div class="button onPhone">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
-           disabled
+           
           href="https://forms.gle/X85vDVwwRexcWcKU8"
         >
-          <span class="text"> All Slots Closed </span></a
+          <span class="text"> Apply Here </span></a
         >
       </div>
       <div class="schedule container">
@@ -230,9 +230,8 @@
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
           href="https://forms.gle/X85vDVwwRexcWcKU8"
-           disabled
         >
-          <span class="text"> All Slots Closed </span></a
+          <span class="text"> Apply Here </span></a
         >
       </div>
     </main>
