--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
            
-          href="https://forms.gle/X85vDVwwRexcWcKU8"
+          href="https://forms.gle/v4xGDsSM99h4qUUX7"
         >
           <span class="text"> Apply Here </span></a
         >
@@ -218,7 +218,7 @@
       <div class="button onPC">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
-          href="https://forms.gle/X85vDVwwRexcWcKU8"
+          href="https://forms.gle/v4xGDsSM99h4qUUX7"
         >
           <span class="text"> Apply Here </span></a
         >
